# live-networks

./: .gitignore  CLAUDE.md  pyproject.toml
live-cta/: .gitignore  pyproject.toml
live-cta/env/: dot.env  gcs_service_account.json
live-cta/live_cta/core/: live.py  ng_live.py
live-cta/live_cta/dashboard/: __init__.py  data_loader.py
live-cta/live_cta/sources/: __init__.py  gcs_tick_source.py  ibkr_client.py  s3_tick_source.py
live-cta/live_cta/storage/: __init__.py
live-cta/scripts/: local_feeder.py  ng_live_runner.py  run_ng_inference.py
live-cta/tests/: test_ibkr_client.py  test_live_evaluation_interface.py
live_cta/: __init__.py
live_cta/core/: __init__.py  live.py  ng_live.py
live_cta/dashboard/: parquet_handler.py  s3_client.py
live_cta/pipelines/: __init__.py  base.py  hybrid.py  orderflow.py  registry.py
live_cta/sources/: __init__.py  gcs_tick_source.py  history_backfill_source.py  s3_tick_source.py  sierra_tick_source.py
live_cta/storage/: aws_client.py  model_manager.py  storage_backend.py
notebooks/: ng_ibkr_hybrid_loader.ipynb
scripts/: inference_server.py  ng_client.py  ng_live_runner.py  ng_server.py  sierra_feeder.py  test_sierra_source.py  test_sierra_tail.py  test_sierra_upload.py
tests/: test_ng_hybrid_server_pipeline.py
